[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execplan-installer"
version = "0.1.0"
description = "Tiny CLI to drop AGENTS.md and .agent/PLANS.md ExecPlan scaffolding into a repo"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["codex", "execplan", "planning", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
execplan-install = "execplan_installer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
