[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptkit"
version = "0.1.0"
description = "Prompt pack manager to install AGENTS snippets and .agent templates (ExecPlan and more)"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["codex", "execplan", "planning", "agents", "prompt", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
promptkit = "promptkit.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.10",
    "mypy>=1.13",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.ruff.isort]
known-first-party = ["promptkit", "promptkit_builtin_packs"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
